[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
libafl_qemu_cmd = { git = "https://github.com/nine-point-eight-p/libafl_qemu_cmd", features = ["nightly"] }

[profile.release]
debug = true
